--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
-Video/Resim Depom
-Kişisel Sitem : http://quin.ezyro.com/
+<html>
+<body>
+
+<center>
+
+<h4>Video/Fotoğraf Deposu</h4>
+
+Kişisel Sitem : <a href="http://quin.ezyro.com/">http://quin.ezyro.com/</a>
+
+</center>
+<center>
+<script language="javascript" src="http://ir.sitekodlari.com/saat0.js"></script>
+</center>
+</body>
+</html>
